# sale-inventory

./: .gitignore  README.md  pyproject.toml
inventory-frontend/: package-lock.json
inventory-frontend/public/: manifest.json
inventory-frontend/src/AddItem/: AddItem.js  AddItem.style.css
inventory-frontend/src/App/: App.js
inventory-frontend/src/ItemsList/: ItemsList.js  ItemsList.style.css
inventory-frontend/src/NotificationArea/: NotificationArea.js  NotificationArea.style.css  index.js
src/garage_inventory/: database.py  main.py  repository.py  router.py
src/sale_inventory/: authentication.py  database.py  entity.py  main.py  repository.py  usecases.py
tests/: test_auth.py  test_routes.py
