[tool.poetry]
name = "garage-inventory"
version = "0.1.0"
description = ""
authors = ["daniel okoniewski <daniel.okoniewski@gmail.com>"]
readme = "README.md"
packages = [{include = "garage_inventory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"
flake8-pyproject = "^1.2.3"
flake8-cognitive-complexity = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts= "--cov=garage_inventory --cov-report term-missing"
testpaths = [
    "tests"
]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache"
]
per-file-ignores = [
    "src/garage_inventory/router.py:F821"
]
max-line-length = 140
max-complexity = 10
